New config field for external view renderer.

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -14,3 +14,5 @@ errorHandler = errorHandler
 path = ../app/views
 ; Maintenance template. Used when environment = maintenance
 maintenanceTemplate = "/maintenance/index.html"
+; External renderer
+useExternalRenderer=true
